# Computer-Vision

./: README.md
ASSIGNMENTS/0/: BINARISE  BINARISE.cpp  BINARISE2  BINARISE2.cpp  Binarise Mean Method.txt  Binarise Personal Method.txt  CMakeCache.txt  CMakeLists.txt  Makefile  Selfie  Selfie.cpp  Video  cmake_install.cmake
ASSIGNMENTS/0/SUBMISSION/: ALL CODE IMAGE FILE.doc  Video.txt
ASSIGNMENTS/2/: Filters.py
Test/: CMakeCache.txt  CMakeLists.txt  DisplayImage  DisplayImage.py  Makefile  cmake_install.cmake  test1  test1.cpp
