cmake_minimum_required(VERSION 2.8)
project( Assignment0 )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Selfie Selfie.cpp )
add_executable( Video Video.cpp )
add_executable( BINARISE BINARISE.cpp )
add_executable( BINARISE2 BINARISE2.cpp )
target_link_libraries( Selfie ${OpenCV_LIBS} )
target_link_libraries( Video ${OpenCV_LIBS} )
target_link_libraries( BINARISE ${OpenCV_LIBS} )
target_link_libraries( BINARISE2 ${OpenCV_LIBS} )